# CMOR438-Spring-26

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: README.md
examples/: README.md
examples/supervised_learning/Linear Regression/: README.md  linear_regression.ipynb
examples/supervised_learning/Logistic Regression/: README.md  logistic_regression.ipynb
examples/supervised_ml/K Nearest Neighbors/: README.md  knn.ipynb
examples/supervised_ml/Random Forest/: README.md  random_forest.ipynb
examples/unsupervised_learning/: README.md
examples/unsupervised_ml/DBSCAN/: README.md  dbscan.ipynb
src/rice_ml/: __init__.py  _base.py
src/rice_ml/processing/: __init__.py  datasets.py  post_processing.py  pre_processing.py
src/rice_ml/supervised_learning/: __init__.py  decision_tree.py  knn.py  linear.py  random_forest.py
src/rice_ml/unsupervised_learning/: __init__.py  dbscan.py
tests/: README.md  test_linear.py
tests/rice_ml/: README.md
tests/unit/: conftest.py  test_dbscan.py  test_decision_tree.py  test_knn.py  test_random_forest.py
